add cover to album and change navbar